--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "madcoda/php-youtube-api": "1.*",
-        "miloschuman/yii2-highcharts-widget": "*"
+        "google/apiclient": "^2.0.0@RC",
+        "miloschuman/yii2-highcharts-widget": "dev-master",
+        "omnilight/yii2-scheduling": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
